--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
     display: flex;
-    justify-content: center;    
+    justify-content: center;
+      
 }
 
 main{
@@ -13,6 +20,7 @@ main{
     color: white;
     border-radius: 10px;
     padding-left: 20px;
+    
 }
 
 header{
@@ -45,4 +53,19 @@ header{
 
 h3{
     margin-bottom: 0;
+}
+
+.profile-tag {
+    background-color: gray;
+    padding: 10px;
+    border-radius: 100px;
+    margin: 5px 50px 0 0;
+}
+
+
+/*other-users section starts from here*/
+.other-users {
+    border: 2px solid white;
+    width: 100%;
+    margin: 20px 0;
 }
