--- a/style.css
+++ b/style.css
@@ -69,3 +69,19 @@ h3{
     width: 100%;
     margin: 20px 0;
 }
+
+#cards {
+    display: flex;
+    gap: 10px;
+    
+}
+
+#user-card {
+    background-color: gray;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
