--- a/style.css
+++ b/style.css
@@ -77,11 +77,27 @@ h3{
 }
 
 #user-card {
-    background-color: gray;
+    background-color: rgb(88, 82, 82);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 10px;
+    gap: 10px;
+    width: 30%;
+    margin-top: 10px;
+}
+
+#user-card > img {
+    border-radius: 100%;
+    width: 100%;
+}
+
+#user-card > button {
+    width: 90%;
+    border-radius: 10px;
+    background-color: white;
+    border: none;
+    padding: 20px 0;
 }
