--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header{
     height: 50px;  
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-top: 20px;
 }
 
 .header-name{
@@ -35,7 +36,15 @@ header{
 
 .icon{
     font-size: 20px;
+    display: flex;
+    gap: 10px;
 }
+
+.icon > img {
+    width: 10%;
+    color: white;
+}
+
 .profile-image{
     width:100px;
     height:100px;
@@ -45,6 +54,7 @@ header{
 .image-stats{
     display: grid;
     grid-template-columns: 30% 1fr;
+    margin-top: 20px;
 }
 .profile-stats{
     display: grid;
@@ -60,6 +70,16 @@ h3{
     padding: 10px;
     border-radius: 100px;
     margin: 5px 50px 0 0;
+}
+
+.profile-action > button {
+    border: 2px solid white;
+    border-radius: 10px;
+    width: 30%;
+    padding: 10px 0;
+    background-color: inherit;
+    border: 2px solid white;
+    color: white;
 }
 
 
