--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h3{
     border-radius: 100px;
     width: 200px;
     margin: 10px 0;
+    border: n;
 }
 
 .profile-action {
@@ -97,6 +98,16 @@ h3{
 .other-users {
     width: 100%;
     margin: 20px 0;
+}
+
+.other-users > p {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 20px;
+}
+
+.other-users > span {
+    
 }
 
 #cards {
