--- a/style.css
+++ b/style.css
@@ -6,12 +6,17 @@
 
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+}
+
+button{
+    font-size: 20px;
 }
 
 body{
     display: flex;
     justify-content: center;
-      
+    
 }
 
 main{
@@ -84,7 +89,7 @@ h3{
 }
 
 .profile-action > button {
-    border: 2px solid white;
+    border: 5px solid white;
     border-radius: 10px;
     width: 30%;
     padding: 10px 0;
@@ -103,7 +108,7 @@ h3{
 .other-users > p {
     display: flex;
     justify-content: space-between;
-    margin: 0 20px;
+    margin: 0 30px 0 0;
 }
 
 .other-users > span {
