--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ header{
         font-size: 20px;
 }
 
+.hero-profile > ul > li{
+    margin: 0 50px;
+}
+
 .icon{
     font-size: 20px;
     display: flex;
@@ -70,6 +74,10 @@ h3{
     padding: 10px;
     border-radius: 100px;
     margin: 5px 50px 0 0;
+}
+
+.profile-action {
+    margin-top: 20px;
 }
 
 .profile-action > button {
