--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ header{
     margin-top: 20px;
 }
 .profile-stats{
+    text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
@@ -73,11 +74,12 @@ h3{
     background-color: gray;
     padding: 10px;
     border-radius: 100px;
-    margin: 5px 50px 0 0;
+    width: 200px;
+    margin: 10px 0;
 }
 
 .profile-action {
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .profile-action > button {
