--- a/style.css
+++ b/style.css
@@ -154,11 +154,12 @@ h3{
 
 footer {
     display: flex;
-    gap: 30px;
+    gap: 10px;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 footer > img {
-    width: 5%;
+    width: 6%;
+    height: 6%;
 }
