--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ h3{
 
 #user-card > img {
     border-radius: 100%;
-    width: 100%;
+    width: 60%;
+    margin: 20px 0;
 }
 
 #user-card > button {
@@ -152,14 +153,40 @@ h3{
     padding: 20px 0;
 }
 
+.user-feeds {
+    text-align: center;
+}
+
+.feed-nav {
+    display: flex;
+    gap: 30px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.feed-nav > img {
+    width: 5%;
+    height: 5%;
+}
+
+#feed-post {
+    border-bottom: 2px solid white;
+    padding-bottom: 20px;
+}
+
+.user-feeds > p {
+    color: blue;
+}
+
 footer {
     display: flex;
     gap: 10px;
     justify-content: space-between;
-    margin: 15px 0;
+    margin: 5px 0;
 }
 
 footer > img {
-    width: 6%;
-    height: 6%;
+    width: 5%;
+    height: 5%;
 }
