--- a/style.css
+++ b/style.css
@@ -174,8 +174,14 @@ h3{
 }
 
 #feed-post {
-    border-bottom: 2px solid white;
+    border-bottom: 3px solid white;
+    border-radius: 2px;
     padding-bottom: 20px;
+    
+}
+
+.user-feeds {
+    margin-bottom: 50px;
 }
 
 .user-feeds > p {
@@ -186,10 +192,16 @@ footer {
     display: flex;
     gap: 10px;
     justify-content: space-between;
-    margin: 5px 0;
+    margin: 30px 0 5px 0;
+    border: 3px solid white;
 }
 
 footer > img {
     width: 5%;
     height: 5%;
+}
+
+#profile-nav {
+    border: 5px solid white;
+    border-radius: 100%;
 }
