--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ button{
 body{
     display: flex;
     justify-content: center;
-    
+    margin-top: 10px;
 }
 
 main{
@@ -45,15 +45,17 @@ ul {
 
 .icon{
     font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-    width: 50%;
-    height: 50%;
+    display: grid;
+    justify-items: end;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    padding-right: 30px;
 }
 
 .icon > img {
-    width: 10%;
+    width: 20%;
+
 }
 
 .profile-image{
