--- a/style.css
+++ b/style.css
@@ -200,8 +200,8 @@ footer {
     gap: 10px;
     justify-content: space-between;
     align-items: center;
-    margin: 30px 0 5px 0;
-    border: 3px solid white;
+    margin: 30px 20px 5px 0;
+    padding: 0 20px;
 }
 
 footer > img {
