--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ button{
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 10px;
+
 }
 
 main{
@@ -54,7 +56,8 @@ ul {
 }
 
 .icon > img {
-    width: 20%;
+    width: 30%;
+    margin-top: 10px;
 
 }
 
@@ -81,10 +84,16 @@ h3{
 
 .profile-tag {
     background-color: rgb(78, 78, 78);
-    padding: 10px;
+    padding: 5px 7px ;
     border-radius: 100px;
-    width: 200px;
-    margin: 10px 0;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.threads-link{
+    vertical-align: bottom;
+    width: 20px;
+    height: 20px;
 }
 
 .profile-action {
@@ -193,7 +202,7 @@ h3{
 }
 
 .news-feed > p {
-    color: blue;
+    color: rgba(6, 6, 187, 0.936);
     margin-top: 15px;
 }
 
@@ -202,7 +211,6 @@ footer {
     gap: 10px;
     justify-content: space-between;
     align-items: center;
-    margin: ;
     padding: 10px 20px;
     border-top: 0.1px solid rgb(52, 52, 52);
     width: 100%;
